--- a/docs/team/belbel98.adoc
+++ b/docs/team/belbel98.adoc
@@ -1,4 +1,4 @@
-= Christabel Teo - Project Portfolio
+= Christabel Teo Hwee Teng - Project Portfolio
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
@@ -70,7 +70,7 @@ https://github.com/AY1920S1-CS2103-T11-3/main/pull/34[#34],
 https://github.com/AY1920S1-CS2103-T11-3/main/pull/35[#35])
 
 ** Documentation:
-*** Done up <<AboutUs#, About Us Page>> (Pull Request https://github.com/AY1920S1-CS2103-T11-3/main/pull/4[#4],
+*** Done up READme, About Us Page, and others (Pull Request https://github.com/AY1920S1-CS2103-T11-3/main/pull/4[#4],
 https://github.com/AY1920S1-CS2103-T11-3/main/pull/120[#120])
 *** <<user-guide, Contributions to the User Guide>>
 *** <<developer-guide, Contributions to the Developer Guide>>
